server sends sun times
