# src/server/app.ts
@@ -1,9 +1,13 @@
 const express = require('express')
+const sunCalc = require('suncalc')
 const app = express()
 const port = 3000
 
-app.get('/', (req, res) => {
-  res.send('Hello World!')
+app.get('/time', (req, res) => {
+  var lat = req.query.lat
+  var long = req.query.long
+  var date = req.query.date
+  res.json(sunCalc.getTimes(date?? Date.now(), lat, long))
 })
 
 app.listen(port, () => {
